Izmjena formi za testiranje na 30 do 40 sek Maknuta kolona sa lokacijama kod pacijenta

--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -7,47 +7,50 @@
     <title> Administrator | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
     <style>
-    .table {
-      border-collapse: separate;
-      border-spacing: 0 30px;
-      text-justify: center;
-      text-align: center;
-    }
 
-    @keyframes blink {
-      0% {
-        background-color: transparent;
-      }
+        .table {
+            border-collapse: separate;
+            border-spacing: 0 30px;
+            text-align: center;
+        }
 
-      50% {
-        background-color: red;
-      }
+        .table {
+            text-justify: center;
+        }
 
-      100% {
-        background-color: transparent;
-      }
-    }
+        @keyframes blink {
+            0% {
+                background-color: transparent;
+            }
 
-    .blink {
-      animation: blink 1s infinite;
-    }
-  </style>
+            50% {
+                background-color: red;
+            }
+
+            100% {
+                background-color: transparent;
+            }
+        }
+
+        .blink {
+            animation: blink 1s infinite;
+        }
+    </style>
     <script>
-    setTimeout(function() {
-      window.location.href = "/redirectToTriageCategory";
-    }, 10000);
-  </script>
+        setTimeout(function () {
+            window.location.href = "/redirectToTriageCategory";
+        }, 30000);
+    </script>
     <script>
-    function blink() {
-      var elementToBlink = document.getElementById("element-to-blink");
-      elementToBlink.classList.toggle("blink");
-    }
-    var isBlinking = false;
-  </script>
+        function blink() {
+            var elementToBlink = document.getElementById("element-to-blink");
+            elementToBlink.classList.toggle("blink");
+        }
+        var isBlinking = false;
+    </script>
+
 </head>
 
 <body class="container-max-width p-3">
@@ -61,7 +64,8 @@
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
+                    style="">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
@@ -79,7 +83,8 @@
 <div class="" style="">
     <div class="container-flex">
         <div id="element-to-blink" class="toggleBlink">
-            <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
+            <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI
+                PACIJENT</h1>
         </div>
     </div>
 </div>
@@ -104,9 +109,6 @@
                     <th class="font-weight-bold">
                         <h3>Dijagnostika</h3>
                     </th>
-                    <th class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </th>
                     <th class="font-weight-bold"></th>
                 </tr>
                 </thead>
@@ -129,9 +131,6 @@
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
                     </td>
-                    <td class="font-weight-bold">
-                        <h3>Reanimacija</h3>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color: red">
@@ -150,9 +149,6 @@
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Akutni dio </h3>
                     </td>
                 </tr>
                 <tr>
@@ -173,9 +169,6 @@
                     <td>
                         <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
                     </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:yellow">
@@ -194,9 +187,6 @@
                     </td>
                     <td>
                         <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio </h3>
                     </td>
                 </tr>
                 <tr>
@@ -217,9 +207,6 @@
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/rtg.webp"></a>
                     </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:green">
@@ -231,14 +218,11 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:20</h3>
                     </td>
-                    <td >
+                    <td>
                         <!-- <a href="#" title="hitna"><img src="../ikone/kat4.webp"></a>-->
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/kat4.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Čekaonica</h3>
                     </td>
                 </tr>
                 <tr>
@@ -257,9 +241,6 @@
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/osoba.webp"></a>
                     </td>
-                    <td class="font-weight-bold">
-                        <h3>Čekaonica</h3>
-                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -270,7 +251,8 @@
     <div class="container-flex">
         <div class="row d-flex justify-content-between">
             <div class="col-lg-8 col-md-6">
-                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija
+                    2023</p>
             </div>
         </div>
     </div>
