Maknuti upitnici za retrijažu na admin i OHBP

--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -232,7 +232,7 @@
             <h3>25.02.2023 11:13</h3>
           </td>
           <td class="font-weight-bold">
-            <h3><a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+            <h3><a href="#" title="retr"> </a></h3>
           </td>
           <td>
             <a href="#" title="status">
@@ -293,7 +293,7 @@
             <h3>25.02.2023 11:40</h3>
           </td>
           <td class="font-weight-bold">
-            <h3><a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+            <h3><a href="#" title="retr"> </a></h3>
           </td>
           <td>
             <a href="#" title="status">
