--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -109,9 +109,16 @@ window.onbeforeunload = function() {
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationPatients'">Pacijenti
                             opservacija</a>
                     </li>
+
                     <li class="h4 text-light text-center d-flex">
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
                     </li>
+                    <li class="h4 text-light text-center d-flex">
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToBis'">BIS</a>
+                    </li>
+
+
+
                 </ul>
             </div>
         </div>
