Pacijent dashboard radi iz baze

--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -99,7 +99,7 @@
                             Opservacija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna
