--- a/src/main/resources/templates/observation_ohbp.html
+++ b/src/main/resources/templates/observation_ohbp.html
@@ -65,7 +65,7 @@
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP Opservacija</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
+                    <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
