--- a/src/main/resources/templates/BIS.html
+++ b/src/main/resources/templates/BIS.html
@@ -92,8 +92,8 @@
 
         <label class="d-block mb-2">Trijaža:</label>
         <input th:field="${caseOhbp.triageCategory}" class="col-xl-3 col-lg-12 col-md-5 col-sm-5 min-w-200 text-center mb-5" name="triageCategory" datatype="number"  required/>
-
-
+        <label class="d-block mb-2">ID:</label>
+        <input th:field="${caseOhbp.caseID}" class="col-xl-3 col-lg-12 col-md-5 col-sm-5 min-w-200 text-center mb-5" name="caseID" datatype="number"  required/>
         <label class="d-block mb-2">Ime:</label>
         <input th:field="${caseOhbp.patientFirstName}" class="col-xl-3 col-lg-12 col-md-5 col-sm-5 min-w-200 text-center mb-5" name="patientFirstName" datatype="text"  required/>
         <label class="d-block mb-2">Prezime:</label>
@@ -117,7 +117,7 @@
 
 
     </div>
-    <footer style="color: #f24521; text-align:center">Copyright &#169; MEDIQUE / All rights reserved</footer>
+    <footer style="color: #74707b; text-align:center">Copyright &#169; MEDIQUE / All rights reserved</footer>
 </div>
 
 </body>
